
CHANGELOG for cope live editor

This file lists all changes relevant for the user - especially all
API changes and new features recommended for most users. The log may
omit bug fixes.
The items are sorted inversely, i.e. lastest items are on top

--------------------------------------------------------------------------
* remove ThreadLocal usage
	THIS CHANGE IS NOT BACKWARDS COMPATIBLE, YOU MUST ADJUST YOUR CODE
	- change write[Head|Bar] to get[Head|Bar]
	- rename LiveRequest.edit for IntegerField to swap
	- remove write[Head|Bar](PrintStream)
	- remove default button for swapping positions
		+ remove LiveServlet.getPreviousPositionButtonURL
		+ remove LiveRequest/LiveFilter.edit(IntegerField, Item)
	- rename Editor to LiveServlet
	- remove button urls for border, hide and close, is now delivered with library
	- move from package com.exedio.cope.editor to com.exedio.cope.live
	- the filter is now a separate class, you need to adjust your web.xml
* bugfix: image preview did not work without cookies
* cope live editor is now it's own project